--- a/Website/web.config
+++ b/Website/web.config
@@ -3,11 +3,9 @@
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-    <clear />
-    <add name="GalleryDb" providerName="System.Data.SqlServerCe.4.0" connectionString="data source=|DataDirectory|\GalleryData.sdf" />
-    <!--<add name="GalleryDb" providerName="System.Data.SqlClient" connectionString="server=(local);uid=;pwd=;Trusted_Connection=yes;database=GalleryDb;Application Name=Gallery Server Pro;MultipleActiveResultSets=True" />-->
-  </connectionStrings>
+	
+	<connectionStrings configSource="App_Data/connectionStrings.config"/>
+   
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <pages theme="" styleSheetTheme="" validateRequest="false" viewStateEncryptionMode="Always" />
@@ -71,12 +69,10 @@
         <section name="requestFiltering" overrideModeDefault="Deny" />
       to:
         <section name="requestFiltering" overrideModeDefault="Allow" />
-    <security>
-      <requestFiltering>
-        <requestLimits maxAllowedContentLength="2147483648" />
-      </requestFiltering>
-    </security>
-    -->
+				-->
+    <security configSource="App_Data\Security.config"/>
+      
+    
     <modules>
       <remove name="WebDAVModule" />
       <remove name="UrlRoutingModule-4.0" />
