--- a/Website/web.config
+++ b/Website/web.config
@@ -4,7 +4,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
 	
-	<connectionStrings configSource="App_Data/connectionStrings.config"/>
+	<connectionStrings configSource="App_Data\connectionStrings.config"/>
    
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -70,7 +70,11 @@
       to:
         <section name="requestFiltering" overrideModeDefault="Allow" />
 				-->
-    <security configSource="App_Data\Security.config"/>
+    <security >
+	<requestFiltering>
+		<requestLimits maxAllowedContentLength="2147483648" />
+	</requestFiltering>
+</security>
       
     
     <modules>
