--- a/TIS.GSP.Business/packages.config
+++ b/TIS.GSP.Business/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
-  <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
+  <package id="SharpZipLib" version="1.3.3" />
 </packages>
